# modelinfo-cli

./: .codacy.yaml  .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  model.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/modelinfo/: __init__.py  __main__.py  architecture.py  calculator.py  cli.py  hardware.py  ui.py
src/modelinfo/parsers/: __init__.py  gguf.py  huggingface.py  pytorch.py  safetensors.py
tests/: test_calculator.py  test_cli.py  test_coderabbit_config.py  test_constraints.py  test_hardware.py  test_hf_timeout_configurable.py  test_parsers.py
tests/fixtures/: config.json  generate_mock.py  generate_mock2.py  mock_mistral-7b.safetensors  mock_model.gguf  mock_model.pt
